--- a/contact.html
+++ b/contact.html
@@ -800,7 +800,7 @@
 
     <script>
         // Google Sheets Integration
-        const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxEQ8jyVFk77d-F1jjGiXCMRzoL2IV7pIbgBLi4jIQV1H4k6lfbTJiu3dzEyrQ0DTU/exec'; // Replace with your Web App URL
+        const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxEQ8jyVFk77d-F1jjGiXCMRzoL2IV7pIbgBLi4jIQV1H4k6lfbTJiu3dzEyrQ0DTU/exec';
         
         // Theme Toggle
         const themeToggle = document.getElementById('theme-toggle');
