--- a/index.html
+++ b/index.html
@@ -858,13 +858,13 @@
                         <div class="tool-icon">📕➡️📘</div>
                         <h4 class="tool-title" data-translate="pdfToWord">PDF to Word</h4>
                         <p class="tool-desc" data-translate="pdfToWordDesc">Convert PDF files to editable Word documents</p>
-                        <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                        <a href="pdf to word.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                     <div class="tool-card" data-tool-id="wordToPdf" data-tool-name="Word to PDF" data-search-keywords="word to pdf, convert word to pdf">
                         <div class="tool-icon">📘➡️📕</div>
                         <h4 class="tool-title" data-translate="wordToPdf">Word to PDF</h4>
                         <p class="tool-desc" data-translate="wordToPdfDesc">Convert Word documents to PDF format</p>
-                        <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                        <a href="word to pdf.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                     <div class="tool-card" data-tool-id="pdfToExcel" data-tool-name="PDF to Excel" data-search-keywords="pdf to excel, convert pdf to excel">
                         <div class="tool-icon">📕➡️📗</div>
