--- a/index.html
+++ b/index.html
@@ -870,25 +870,25 @@
                         <div class="tool-icon">📕➡️📗</div>
                         <h4 class="tool-title" data-translate="pdfToExcel">PDF to Excel</h4>
                         <p class="tool-desc" data-translate="pdfToExcelDesc">Extract data from PDF to Excel spreadsheets</p>
-                        <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                        <a href="pdf to excel.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                     <div class="tool-card" data-tool-id="excelToPdf" data-tool-name="Excel to PDF" data-search-keywords="excel to pdf, convert excel to pdf">
                         <div class="tool-icon">📗➡️📕</div>
                         <h4 class="tool-title" data-translate="excelToPdf">Excel to PDF</h4>
                         <p class="tool-desc" data-translate="excelToPdfDesc">Convert Excel spreadsheets to PDF</p>
-                        <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                        <a href="excel to pdf.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                     <div class="tool-card" data-tool-id="pdfToPowerpoint" data-tool-name="PDF to Powerpoint" data-search-keywords="pdf to powerpoint, convert pdf to powerpoint">
                         <div class="tool-icon">📕➡️📽️</div>
                         <h4 class="tool-title" data-translate="pdfToPowerpoint">PDF to Powerpoint</h4>
                         <p class="tool-desc" data-translate="pdfToPowerpointDesc">Convert PDF to editable Powerpoint presentations</p>
-                        <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                        <a href="pdf to powerpoint.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                     <div class="tool-card" data-tool-id="powerpointToPdf" data-tool-name="Powerpoint to PDF" data-search-keywords="powerpoint to pdf, convert powerpoint to pdf">
                         <div class="tool-icon">📽️➡️📕</div>
                         <h4 class="tool-title" data-translate="powerpointToPdf">Powerpoint to PDF</h4>
                         <p class="tool-desc" data-translate="powerpointToPdfDesc">Convert Powerpoint presentations to PDF</p>
-                        <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                        <a href="powerpoint to pdf.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                     <div class="tool-card" data-tool-id="pdfToJpg" data-tool-name="PDF to JPG" data-search-keywords="pdf to jpg, convert pdf to jpg">
                         <div class="tool-icon">📕➡️🖼️</div>
