--- a/pdf to word.html
+++ b/pdf to word.html
@@ -1049,7 +1049,7 @@
                     
                     <h3>FOLLOW US</h3>
                     <div class="social-icons">
-                        <a href="https://facebook.com/lollypopdf" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=61584270407933" class="social-icon"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://linkedin.com/company/lollypopdf" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
                         <a href="https://twitter.com/lollypopdf" class="social-icon"><i class="fab fa-twitter"></i></a>
                         <a href="https://instagram.com/lollypopdf" class="social-icon"><i class="fab fa-instagram"></i></a>
