Update pdf to powerpoint.html

--- a/pdf to powerpoint.html
+++ b/pdf to powerpoint.html
@@ -1779,7 +1779,7 @@
                 privacyPolicy: "プライバシーポリシー",
                 disclaimer: "免責事項",
                 terms: "利用規約",
-                copyright: "© 2025 LollyPoPDF. All rights reserved."
+                copyright: "© 2025 LollyPoPDF. 無断転載を禁じます."
             },
             ru: {
                 home: "Главная",
@@ -1895,7 +1895,7 @@
                 privacyPolicy: "개인정보 보호정책",
                 disclaimer: "면책조항",
                 terms: "서비스 약관",
-                copyright: "© 2025 LollyPoPDF. All rights reserved."
+                copyright: "© 2025 LollyPoPDF. 모든 권리 보유."
             },
             "zh-CN": {
                 home: "首页",
