--- a/index.html
+++ b/index.html
@@ -1322,7 +1322,7 @@
                     <div class="social-icons">
                         <a href="https://facebook.com/lollypopdf" target="_blank"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://linkedin.com/company/lollypopdf" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="https://twitter.com/lollypopdf" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://twitter.com/lollypopdf" target="_blank" aria-label="X (Twitter)"><i class="fa-brands fa-x-twitter"></i></a>
                         <a href="https://instagram.com/lollypopdf" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a href="https://youtube.com/@lollypopdf" class="social-icon"><i class="fab fa-youtube"></i></a>
                         <a href="https://www.trustpilot.com/review/lollypopdf.com" class="social-icon"><i class="fas fa-star"></i></a>
