--- a/document converter.html
+++ b/document converter.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free Document Converter Tool | LollyPoPDF</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
     <style>
@@ -943,12 +943,11 @@
                     
                     <h3>FOLLOW US</h3>
                     <div class="social-icons">
-                        <a href="https://facebook.com/lollypopdf" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://linkedin.com/company/lollypopdf" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="https://twitter.com/lollypopdf" class="social-icon"><i class="fab fa-twitter"></i></a>
-                        <a href="https://instagram.com/lollypopdf" class="social-icon"><i class="fab fa-instagram"></i></a>
-                        <a href="https://youtube.com/@lollypopdf" class="social-icon"><i class="fab fa-youtube"></i></a>
-                        <a href="https://www.trustpilot.com/review/lollypopdf.com" class="social-icon"><i class="fas fa-star"></i></a>
+                        <a href="https://facebook.com/lollypopdf" class="social-icon" title="Follow us on Facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://linkedin.com/company/lollypopdf" class="social-icon" title="Follow us on LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://twitter.com/lollypopdf" class="social-icon" title="Follow us on Twitter/X"><i class="fab fa-x-twitter"></i></a>
+                        <a href="https://instagram.com/lollypopdf" class="social-icon" title="Follow us on Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="https://youtube.com/@lollypopdf" class="social-icon" title="Subscribe to our YouTube channel"><i class=
                     </div>
                 </div>
                 
