--- a/document converter.html
+++ b/document converter.html
@@ -947,7 +947,7 @@
                         <a href="https://linkedin.com/company/lollypopdf" class="social-icon" title="Follow us on LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                         <a href="https://twitter.com/lollypopdf" class="social-icon" title="Follow us on Twitter/X"><i class="fab fa-x-twitter"></i></a>
                         <a href="https://instagram.com/lollypopdf" class="social-icon" title="Follow us on Instagram"><i class="fab fa-instagram"></i></a>
-                        <a href="https://youtube.com/@lollypopdf" class="social-icon" title="Subscribe to our YouTube channel"><i class=
+                        <a href="https://youtube.com/@lollypopdf" class="social-icon" title="Subscribe to our YouTube channel"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
                 
