--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="LollyPoPdf - All your daily tools in one place. Free, secure, and unlimited PDF, image, text, audio, and web development tools.">
     <title>LollyPoPdf - All Your Daily Tools in One Place</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
         :root {
             --primary-color: #8B5CF6;
@@ -777,7 +777,7 @@
             </nav>
             
             <div class="header-right">
-                <div class="email">lollypoppdf@gmail.com</div>
+                <div class="email">contact@lollypopdf.com</div>
                 <button class="theme-toggle" id="theme-toggle">
                     <i class="fas fa-moon"></i>
                 </button>
