--- a/index.html
+++ b/index.html
@@ -1320,7 +1320,7 @@
                     </div>
                     <p class="footer-tagline">FOLLOW US.</p>
                     <div class="social-icons">
-                        <a href="https://facebook.com/lollypopdf" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.facebook.com/people/Lollypopdf/61585752146066/" class="social-icon" title="Follow us on Facebook"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://linkedin.com/company/lollypopdf" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a href="https://twitter.com/lollypopdf" target="_blank"><i class="fab fa-twitter"></i></a>
                         <a href="https://instagram.com/lollypopdf" target="_blank"><i class="fab fa-instagram"></i></a>
