--- a/index.html
+++ b/index.html
@@ -1324,7 +1324,7 @@
                         <a href="https://linkedin.com/in/lollypopdf-com-4b334a3a0" class="social-icon" title="Follow us on LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                         <a href="https://x.com/LollypopdfTools" class="social-icon" title="Follow us on Twitter/X"><i class="fab fa-x-twitter"></i></a>
                         <a href="https://www.instagram.com/lollypopdf_tools/" class="social-icon" title="Follow us on Instagram"><i class="fab fa-instagram"></i></a>
-                        <a href="https://youtube.com/@lollypopdf" class="social-icon"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.youtube.com/@LollyPoPdf_Tools" class="social-icon"><i class="fab fa-youtube"></i></a>
                         <a href="https://www.trustpilot.com/review/lollypopdf.com" class="social-icon"><i class="fas fa-star"></i></a>
                     </div>
                 </div>
