Update pdf to word.html

--- a/pdf to word.html
+++ b/pdf to word.html
@@ -879,7 +879,7 @@
                 </nav>
                 
                 <div class="header-right">
-                    <span class="email">lollypoppdf@gmail.com</span>
+                    <span class="email">contact@lollypopdf.com</span>
                     <button class="theme-toggle" id="themeToggle">
                         <i class="fas fa-moon"></i>
                     </button>
