--- a/image-resizer.html
+++ b/image-resizer.html
@@ -882,7 +882,7 @@
             </nav>
             
             <div class="header-right">
-                <span class="email">lollypoppdf@gmail.com</span>
+                <span class="email">contact@lollypopdf.com</span>
                 <button class="theme-toggle" id="themeToggle">
                     <i class="fas fa-moon"></i>
                 </button>
