--- a/pdf merger splitter.html
+++ b/pdf merger splitter.html
@@ -1140,11 +1140,10 @@
                 </a>
                 <h3 data-i18n="footer.follow">FOLLOW US</h3>
                 <div class="social-icons">
-                    <a href="https://facebook.com/lollypopdf" class="social-icon" title="Follow us on Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://linkedin.com/company/lollypopdf" class="social-icon" title="Follow us on LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="https://twitter.com/lollypopdf" class="social-icon" title="Follow us on Twitter/X"><i class="fab fa-x-twitter"></i></a>
-                    <a href="https://instagram.com/lollypopdf" class="social-icon" title="Follow us on Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="https://youtube.com/@lollypopdf" class="social-icon" title="Subscribe to our YouTube channel"><i class="fab fa-youtube"></i></a>                    
+                    <a href="https://www.facebook.com/people/Lollypopdf/61585752146066/" class="social-icon" title="Follow us on Facebook"><i class="fab fa-facebook-f"></i></a>                      
+                    <a href="https://x.com/LollypopdfTools" class="social-icon" title="Follow us on Twitter/X"><i class="fab fa-x-twitter"></i></a>
+                    <a href="https://www.instagram.com/lollypopdf_tools/" class="social-icon" title="Follow us on Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/@LollyPoPdf_Tools" class="social-icon"><i class="fab fa-youtube"></i></a>                     
                 </div>
             </div>
             
