--- a/pdf to word.html
+++ b/pdf to word.html
@@ -1049,13 +1049,10 @@
                     
                     <h3>FOLLOW US</h3>
                     <div class="social-icons">
-                        <a href="https://www.facebook.com/profile.php?id=61584270407933" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://linkedin.com/company/lollypopdf" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="https://twitter.com/lollypopdf" class="social-icon"><i class="fab fa-twitter"></i></a>
-                        <a href="https://instagram.com/lollypopdf" class="social-icon"><i class="fab fa-instagram"></i></a>
-                        <a href="https://pinterest.com/lollypopdf" class="social-icon"><i class="fab fa-pinterest-p"></i></a>
-                        <a href="https://youtube.com/@lollypopdf" class="social-icon"><i class="fab fa-youtube"></i></a>
-                        <a href="https://www.trustpilot.com/review/lollypopdf.com" class="social-icon"><i class="fas fa-star"></i></a>
+                        <a href="https://www.facebook.com/people/Lollypopdf/61585752146066/" class="social-icon" title="Follow us on Facebook"><i class="fab fa-facebook-f"></i></a>                      
+                        <a href="https://x.com/LollypopdfTools" class="social-icon" title="Follow us on Twitter/X"><i class="fab fa-x-twitter"></i></a>
+                        <a href="https://www.instagram.com/lollypopdf_tools/" class="social-icon" title="Follow us on Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.youtube.com/@LollyPoPdf_Tools" class="social-icon"><i class="fab fa-youtube"></i></a> 
                     </div>
                 </div>
                 
