Update advanced screen recorder.html

--- a/advanced screen recorder.html
+++ b/advanced screen recorder.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Universal Screen Recorder | LollyPoPdf</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"> 
     <style>
         :root {
             --primary-color: #9370db;
@@ -950,7 +950,7 @@
             </nav>
             
             <div class="header-right">
-                <span class="email">lollypoppdf@gmail.com</span>
+                <span class="email">contact@lollypopdf.com</span>
                 <button class="theme-toggle" id="themeToggle">
                     <i class="fas fa-moon"></i>
                 </button>
@@ -1154,11 +1154,10 @@
                 </a>
                 <h3 data-i18n="footer.follow">FOLLOW US</h3>
                 <div class="social-icons">
-                    <a href="https://facebook.com/lollypopdf" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://linkedin.com/company/lollypopdf" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="https://twitter.com/lollypopdf" class="social-icon"><i class="fab fa-twitter"></i></a>
-                    <a href="https://instagram.com/lollypopdf" class="social-icon"><i class="fab fa-instagram"></i></a>
-                    <a href="https://pinterest.com/lollypopdf" class="social-icon"><i class="fab fa-pinterest-p"></i></a>
+                    <a href="https://www.facebook.com/people/Lollypopdf/61585752146066/" class="social-icon" title="Follow us on Facebook"><i class="fab fa-facebook-f"></i></a>                      
+                    <a href="https://x.com/LollypopdfTools" class="social-icon" title="Follow us on Twitter/X"><i class="fab fa-x-twitter"></i></a>
+                    <a href="https://www.instagram.com/lollypopdf_tools/" class="social-icon" title="Follow us on Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/@LollyPoPdf_Tools" class="social-icon"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
             
