Update json formatter validator.html

--- a/json formatter validator.html
+++ b/json formatter validator.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JSON Formatter & Validator | LollyPoPdf</title>
     <meta name="description" content="Free online JSON formatter and validator tool. Beautify, validate, and fix JSON code with syntax highlighting. No registration required.">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
         :root {
             --primary-color: #9370db;
@@ -1001,7 +1001,7 @@
             </nav>
             
             <div class="header-right">
-                <span class="email">lollypoppdf@gmail.com</span>
+                <span class="email">contact@lollypopdf.com</span>
                 <button class="theme-toggle" id="themeToggle">
                     <i class="fas fa-moon"></i>
                 </button>
