--- a/scientific calculator.html
+++ b/scientific calculator.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Engineering & Scientific Calculator | LollyPoPdf</title>
     <meta name="description" content="Free online engineering and scientific calculator with advanced functions, graphing, conversions, and offline support.">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/mathjs@11.8.0/lib/browser/math.js"></script>
     <script src="https://cdn.plot.ly/plotly-2.24.1.min.js"></script>
     <style>
@@ -905,7 +905,7 @@
             </nav>
             
             <div class="header-right">
-                <span class="email">lollypoppdf@gmail.com</span>
+                <span class="email">contact@lollypopdf.com</span>
                 <button class="theme-toggle" id="themeToggle">
                     <i class="fas fa-moon"></i>
                 </button>
