--- a/contact.html
+++ b/contact.html
@@ -621,7 +621,7 @@
                     <li><a href="https://lollypopdf.github.io/LollyPoPdf#home" id="nav-home">Home</a></li>
                     <li><a href="https://lollypopdf.github.io/LollyPoPdf#about" id="nav-about">About Us</a></li>
                     <li><a href="https://lollypopdf.github.io/LollyPoPdf#tools" id="nav-tools">Tools</a></li>
-                    <li><a href="#contact.html" id="nav-contact">Contact</a></li>
+                    <li><a href="contact.html" id="nav-contact">Contact</a></li>
                 </ul>
             </nav>
             
@@ -736,7 +736,7 @@
                         <li><a href="https://lollypopdf.com#home" id="home-link">Home</a></li>
                         <li><a href="tools.html" id="all-tools-link">All Tools</a></li>
                         <li><a href="faq.html" id="faq-link">FAQ</a></li>
-                        <li><a href="#contact.html" id="contact-link">Contact</a></li>
+                        <li><a href="contact.html" id="contact-link">Contact</a></li>
                         <li><a href="privacy-policy.html" id="privacy-link">Privacy Policy</a></li>
                         <li><a href="disclaimer.html" id="disclaimer-link">Disclaimer</a></li>
                         <li><a href="terms.html" id="terms-link">Terms of Service</a></li>
